gain matcher no longer breaks on less than the full GRIFFIN array

--- a/css/custom.css
+++ b/css/custom.css
@@ -228,6 +228,7 @@ td.zeroRow{
 
 div.refitButtons{
     margin-top: 1em;
+    display: inline-block;
 }
 
 div.swatch{
